increased height of schedule element to fix text wrapping issues

--- a/client/schedule.css
+++ b/client/schedule.css
@@ -9,7 +9,7 @@
   border-left: 1px solid black;
   border-right: 1px solid black;
   border-bottom: 1px solid black;
-  height: 50px;
+  height: 200px;
   width: 100px;
   text-align: center;
   display: inline-block;
